[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Hoopers/HulaHooper.gd" type="Script" id=1]
[ext_resource path="res://Assets/Hoopers/perso_dancing-02.png" type="Texture" id=2]
[ext_resource path="res://Assets/Hoopers/perso_dancing-03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Hoopers/perso_dancing-04.png" type="Texture" id=4]
[ext_resource path="res://Assets/Hoopers/perso_stuck-08.png" type="Texture" id=5]
[ext_resource path="res://Assets/Hoopers/perso_stuck-09.png" type="Texture" id=6]
[ext_resource path="res://Assets/Hoopers/perso_stuck-05.png" type="Texture" id=7]
[ext_resource path="res://Assets/Hoopers/perso_stuck-07.png" type="Texture" id=8]
[ext_resource path="res://Assets/Hoopers/perso_stuck-06.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 40 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": false,
"name": "suffocating",
"speed": 0.4
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "hooping",
"speed": 6.0
} ]

[node name="HulaHooper" type="StaticBody2D"]
position = Vector2( 432, 480 )
input_pickable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LeavingTimer" type="Timer" parent="."]
one_shot = true

[node name="IncidentTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="HooperAnim" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 3 )
animation = "hooping"
frame = 1
playing = true
[connection signal="input_event" from="." to="." method="_on_HulaHooper_input_event"]
[connection signal="timeout" from="LeavingTimer" to="." method="_on_LeavingTimer_timeout"]
[connection signal="timeout" from="IncidentTimer" to="." method="_on_IncidentTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
